--- a/Rapport2.tex
+++ b/Rapport2.tex
@@ -321,8 +321,7 @@ Nous essayons d'estimer $x_0$ et $a$ directment. L'algorithme d'approximation im
 
 Testons avec $x_0=13$ et $a=0.5$.
 
-PROBLEME UTF8 Cauchy.R
-%\lstinputlisting[firstline=1, lastline=49, language=R]{src/Cauchy.R}
+\lstinputlisting[firstline=1, lastline=49, language=R]{src/Cauchy.R}
 
 \begin{figure}[h]
 \includegraphics[width=\linewidth]{images/Cauchy_real_vs_theo.png}
@@ -349,13 +348,13 @@ Maintenant on s'intéresse au biais d'estimateur. On relance l'algorithme en-des
 
 \lstinputlisting{src/Cauchy-variN.R}
 
-\begin{figure}[h]
+\begin{figure}[!h]
 \includegraphics[width=\linewidth]{images/Cauchy_convergence_parametres.png}
 \caption{Convergences de $\hat{x_0}$ et $\hat{a}$ vers valeurs théoriques}
 \end{figure}
 
 Nous observons que les valeurs estimées se rassemblent assez proches de la valeur théorique.
-
+\clearpage
 \subsection{Etude de loi d'extremum}
 
 Générons donc des échantillons de $n$ valeurs ($n=10, 100, 1000, etc.$). Parmi chacun, $\frac{n}{10}$ valeurs les plus grandes seront gardées pour étudier la loi d'extremum.
@@ -379,29 +378,18 @@ Par conséquent,
  \Rightarrow \arctan \frac{{x - {x_0}}}{a} + \frac{\pi }{2} = \arctan \left( { - \frac{a}{{x - {x_0}}}} \right) = \arctan \frac{a}{{{x_0} - x}}\\
  \Rightarrow {F_{{x_{\max }}}}\left( x \right) = {\pi ^{ - n}}{\left( {\arctan \frac{{x - {x_0}}}{a} + \frac{\pi }{2}} \right)^n} = {\pi ^{ - n}}{\arctan ^n}\frac{a}{{{x_0} - x}}
 \end{array}\]
-\clearpage
 
 Nous prenons 3 valeurs les plus grandes pour chaque itération, et établissons leur histogramme.
-PROBLEME UTF8 Cauchy-extreme.R
-%\lstinputlisting[language=R, firstline=1, lastline=39]{src/Cauchy-extreme.R}
 
-\begin{figure}[h]
+\lstinputlisting[language=R, firstline=1, lastline=39]{src/Cauchy-extreme.R}
+
+\begin{figure}[!h]
 \centering
 \includegraphics[width=0.8\linewidth]{images/Cauchy_extremum.png}
 \caption{Histogramme de valeurs extremum de la distribution de Cauchy}
 \end{figure}
 
-Afin d'approximer la loi d'extremum, nous ne regardons que les réalisations positives. En utilisant le package \emph{poweRlaw}, nous calculons la compatibilité de la loi d'extremum.
 
-\lstinputlisting[language=R, firstline=41, lastline=50]{src/Cauchy-extreme.R}
-
-\begin{figure}[h]
-\centering
-\includegraphics[width=0.8\linewidth]{images/Cauchy_extremum_fitting.png}
-\caption{Approcher la loi d'extremum avec celle des maximales de Cauchy. Les données (verte) ne s'approchent pas totalement de l'approximation (rouge).}
-\end{figure}
-
-Calcul de $p-value$ nous retourne $0$, qui signifie l'incompatibilité de ces deux lois.
 \clearpage
 
 \begin{thebibliography}{3}
@@ -410,6 +398,8 @@ Calcul de $p-value$ nous retourne $0$, qui signifie l'incompatibilité de ces de
 Wikipedia,
 
 \url{https://en.wikipedia.org/wiki/Cauchy_distribution}
+
+\bibitem{LoiExtremum} 
 \url{https://en.wikipedia.org/wiki/Generalized_extreme_value_distribution}
 
 \end{thebibliography}
