--- a/Rapport2.tex
+++ b/Rapport2.tex
@@ -243,13 +243,28 @@ On obtient alors la figure \ref{Distributions extrêmes de la loi géométrique}
 
 \begin{figure}[!h]
 \begin{center}
- \includegraphics[scale=0.3]{images/extremGeom.png} 
+ \includegraphics[scale=0.4]{images/extremGeom.png} 
 \end{center}
  \caption{Distributions extrêmes de la loi géométrique}
  \label{Distributions extrêmes de la loi géométrique}
 \end{figure}
 
-La distribution extrême correspondante ne peut pas être une loi de gumbel puisque nous avons des valeurs uniquement positive, cela pourrait être une loi de Weibull ....
+La distribution extrême correspondante ne peut pas être une loi de gumbel puisque nous avons des valeurs uniquement positive. Cela pourrait correspondre à une loi de weibull, de Pareto, lognormale ou encore de Fréchet.
+Afin de tester cela on effectue une estimation pour la loi de weibull et la loi lognormale\footnote{les autres lois n'étant pas implémenté et les estimations sont complexes à effectuer} avec le script R suivant (en utlisant la librairie MASS) :
+
+\lstinputlisting[language=R]{src/geomExtrem.R}
+
+On obtient alors la figure \ref{Estimation loi extrême géométrique}. On voit que la loi lognormale donne une très bonne estimation, meilleure que celle de Weibull. Afin de vérifier que la loi lognormale "colle" au données, il faudrait effectuer un test $\chi^2$ pour comparer les données avec la loi théorique ou utiliser un test de normalité shapiro wilk sur le logarithme des données (mais dans le premier cas il n'y a pas de fonction R directe pour le calcul des intervalles et des probabilités et dans le second cas, R n'accepte pas des échantillons de plus de 5000 (ici on est à 10000)).
+
+\begin{figure}[!h]
+\begin{center}
+ \includegraphics[scale=0.7]{images/RplotGeomExtrem.png} 
+\end{center}
+ \caption{Estimation loi extrême géométrique}
+ \label{Estimation loi extrême géométrique}
+\end{figure}
+
+
 
 \newpage
 
@@ -295,7 +310,10 @@ L (X) = L\left( {{X_1},{X_2},...,{X_n}} \right) & = \prod\limits_{i = 1}^n {{f_X
 & = {\pi ^{ - n}}\prod\limits_{i = 1}^n {\frac{a}{{{{\left( {{x_i} - {x_0}} \right)}^2} + a}}}
 \end{align*}
 
-On cherche l'optimum maximale.
+On cherche l'optimum maximale en regardant où s'annule la dérivée de la fonction de vraisemblance
+\footnote{On pourrait aussi utiliser le logarithme $\log{L(X)} = \pi^{-n} \sum\limits_{i=1}^{n} \log{a} -
+\log{((x_i-x_0)^2+a)}$ qui atteint un optimum au même point puisque cette fonction est continue et strictement croissante
+sur $]0;1]$}.
 
 \begin{align*}
 \frac{{\partial L}}{{\partial {x_0}}}\left( X \right) & = {\pi ^{ - n}}\sum\limits_{j = 1}^n {\left( { - \frac{{a\left( {2{x_j} - 2{x_0}} \right)}}{{{{\left[ {{{\left( {{x_0} - {x_j}} \right)}^2} + a} \right]}^2}}}\prod\limits_{i = 1;i \ne j}^n {\frac{a}{{{{\left( {{x_i} - {x_0}} \right)}^2} + a}}} } \right)}\\
@@ -307,7 +325,7 @@ On cherche l'optimum maximale.
 \frac{{\partial L}}{{\partial a}}\left( X \right) & = {\pi ^{ - n}}\sum\limits_{j = 1}^n {\left( {\frac{{{{\left( {{x_j} - {x_0}} \right)}^2} + a - a}}{{{{\left( {{x_j} - {x_0}} \right)}^2} + a}}\prod\limits_{i = 1;i \ne j}^n {\frac{a}{{{{\left( {{x_i} - {x_0}} \right)}^2} + a}}} } \right)}\\
 &  = {\pi ^{ - n}}{a^{n - 1}}\frac{{\sum\limits_{j = 1}^n {{{\left( {{x_0} - {x_j}} \right)}^2}} }}{{\prod\limits_{i = 1}^n {\left( {{{\left( {{x_i} - {x_0}} \right)}^2} + a} \right)} }} > 0,\ \forall a > 0
 \end{align*}
-On ne peut donc pas estimer a par la méthode du max
+On ne peut donc pas estimer a par la méthode du maximum de vraisemblance.
 
 \subsubsection*{Résolution par R}
 
@@ -321,8 +339,8 @@ Nous essayons d'estimer $x_0$ et $a$ directment. L'algorithme d'approximation im
 
 Testons avec $x_0=13$ et $a=0.5$.
 
-PROBLEME UTF8 Cauchy.R
-%\lstinputlisting[firstline=1, lastline=49, language=R]{src/Cauchy.R}
+%PROBLEME UTF8 Cauchy.R
+\lstinputlisting[firstline=2, lastline=50, language=R]{src/Cauchy.R}
 
 \begin{figure}[h]
 \includegraphics[width=\linewidth]{images/Cauchy_real_vs_theo.png}
@@ -339,9 +357,9 @@ Nous testons ici si les valeurs trouvées par R sont vraiment approchées à cel
 
 R nous donne la fonction \emph{ks.test} pour valider la compatibilité d'une échantillon avec une loi selon le test de Kolmogorov-Smirnov.
 
-\lstinputlisting[firstline=51, lastline=51]{src/Cauchy.R}
+\lstinputlisting[firstline=52, lastline=52]{src/Cauchy.R}
 
-On a trouvé $D = 0.02696$, $p-value = 0.4614$, signifiant l'écart maximale est $0.02696$ et le niveau d'acceptance est $0.4614$. Vu que nous fixons $\alpha = 5\% < p-value$, l'échantillon dépasse largement le test. Autrement dit, il se distribue selon la loi de Cauchy.
+On a trouvé $D = 0.02696$, $p-value = 0.4614$, ce la signifie que l'écart maximale est $0.02696$ et le niveau d'acceptation est $0.4614$. Vu que nous fixons $\alpha = 5\% < p-value$, l'échantillon dépasse largement le test. Autrement dit, il se distribue selon la loi de Cauchy.
 
 \subsection{Etude de biais d'estimateur}
 
@@ -382,8 +400,8 @@ Par conséquent,
 \clearpage
 
 Nous prenons 3 valeurs les plus grandes pour chaque itération, et établissons leur histogramme.
-PROBLEME UTF8 Cauchy-extreme.R
-%\lstinputlisting[language=R, firstline=1, lastline=39]{src/Cauchy-extreme.R}
+%PROBLEME UTF8 Cauchy-extreme.R
+\lstinputlisting[language=R, firstline=2, lastline=40]{src/Cauchy-extreme.R}
 
 \begin{figure}[h]
 \centering
@@ -393,7 +411,7 @@ PROBLEME UTF8 Cauchy-extreme.R
 
 Afin d'approximer la loi d'extremum, nous ne regardons que les réalisations positives. En utilisant le package \emph{poweRlaw}, nous calculons la compatibilité de la loi d'extremum.
 
-\lstinputlisting[language=R, firstline=41, lastline=50]{src/Cauchy-extreme.R}
+\lstinputlisting[language=R, firstline=42, lastline=51]{src/Cauchy-extreme.R}
 
 \begin{figure}[h]
 \centering
@@ -410,6 +428,7 @@ Calcul de $p-value$ nous retourne $0$, qui signifie l'incompatibilité de ces de
 Wikipedia,
 
 \url{https://en.wikipedia.org/wiki/Cauchy_distribution}
+
 \url{https://en.wikipedia.org/wiki/Generalized_extreme_value_distribution}
 
 \end{thebibliography}
